force-app/main/default/objects/Tangible_Property_Details__c/Tangible_Property_Details__c.object-meta.xml
<CustomObject>
    <label>Tangible Property Details</label>
    <nameField>
        <displayFormat>TPD-{0}</displayFormat>
        <label>Tangible Property Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tangible Property Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>