force-app/main/default/objects/Tangible_Property_Details__c/fields/AddressOfProperty__c.field-meta.xml
<CustomField>
    <fullName>AddressOfProperty__c</fullName>
    <label>Address of Property</label>
    <length>255</length>
    <type>Text</type>
</CustomField>