force-app/main/default/objects/Tangible_Property_Details__c/fields/CostToAwardBE__c.field-meta.xml
<CustomField>
    <fullName>CostToAwardBE__c</fullName>
    <label>Cost to Award BE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>