force-app/main/default/objects/Tangible_Property_Details__c/fields/CostToAwardCE__c.field-meta.xml
<CustomField>
    <fullName>CostToAwardCE__c</fullName>
    <label>Cost to Award CE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>