force-app/main/default/objects/Tangible_Property_Details__c/fields/CostToAwardProperty__c.field-meta.xml
<CustomField>
    <fullName>CostToAwardProperty__c</fullName>
    <label>Cost to Award Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>