force-app/main/default/objects/Tangible_Property_Details__c/fields/CostToAwardVehicles__c.field-meta.xml
<CustomField>
    <fullName>CostToAwardVehicles__c</fullName>
    <label>Cost to Award Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>