force-app/main/default/objects/Tangible_Property_Details__c/fields/ItemDescriptionBE__c.field-meta.xml
<CustomField>
    <fullName>ItemDescriptionBE__c</fullName>
    <label>Item Description BE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>