force-app/main/default/objects/Tangible_Property_Details__c/fields/ItemDescriptionCE__c.field-meta.xml
<CustomField>
    <fullName>ItemDescriptionCE__c</fullName>
    <label>Item Description CE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>