force-app/main/default/objects/Tangible_Property_Details__c/fields/LeaseIDOrVIN__c.field-meta.xml
<CustomField>
    <fullName>LeaseIDOrVIN__c</fullName>
    <label>Lease ID or VIN #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>