force-app/main/default/objects/Tangible_Property_Details__c/fields/PropertyDescription__c.field-meta.xml
<CustomField>
    <fullName>PropertyDescription__c</fullName>
    <label>Property Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>