force-app/main/default/objects/Tangible_Property_Details__c/fields/PurchaseDateBE__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateBE__c</fullName>
    <label>Purchase Date BE</label>
    <type>Date</type>
</CustomField>