force-app/main/default/objects/Tangible_Property_Details__c/fields/PurchaseDateCE__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateCE__c</fullName>
    <label>Purchase Date CE</label>
    <type>Date</type>
</CustomField>