force-app/main/default/objects/Tangible_Property_Details__c/fields/PurchaseDateLeaseDate__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateLeaseDate__c</fullName>
    <label>Purchase Date/Lease Date</label>
    <type>Date</type>
</CustomField>