force-app/main/default/objects/Tangible_Property_Details__c/fields/PurchaseDateLeaseDateProperty__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateLeaseDateProperty__c</fullName>
    <label>Purchase Date/Lease Date property</label>
    <type>Date</type>
</CustomField>