force-app/main/default/objects/Tangible_Property_Details__c/fields/PurchaseDateLeaseDateVehicles__c.field-meta.xml
<CustomField>
    <fullName>PurchaseDateLeaseDateVehicles__c</fullName>
    <label>Purchase Date/Lease Date Vehicles</label>
    <type>Date</type>
</CustomField>