force-app/main/default/objects/Tangible_Property_Details__c/fields/Tangible_Property_Report__c.field-meta.xml
<CustomField>
    <fullName>Tangible_Property_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tangible Property Report</label>
    <referenceTo>Tangible_Property_Report__c</referenceTo>
    <relationshipLabel>Tangible Property Details</relationshipLabel>
    <relationshipName>Tangible_Property_Details</relationshipName>
    <type>Lookup</type>
</CustomField>